# Automatic_Vacuum_Cleaner

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  build_and_run.sh  main.cpp
algo/: MyAlgo.cpp  MyAlgo.h
algo/algo1/: algo_323855288_209648815_A.cpp  algo_323855288_209648815_A.h
algo/algo2/: algo_323855288_209648815_B.cpp  algo_323855288_209648815_B.h
algorithm/: AlgorithmRegistration.h
bonus/: SystemManager.cpp  SystemManager.h  bonus.txt  button.h
common/: AlgorithmRegistrar.h
diagrams/: vacuum_cleaner_uml.puml
houses/: MyHouse1.house  MyHouse10.house  MyHouse11.house  MyHouse12.house  MyHouse13.house  MyHouse14.house  MyHouse2.house  MyHouse4.house  MyHouse5.house  MyHouse6.house  MyHouse7.house  MyHouse8.house  MyHouse9.house
houses/houses/: MyHouse15.house  MyHouse3.house
simulation/: ConcreteBatteryMeter.cpp  ConcreteBatteryMeter.h  ConcreteDirtSensor.cpp  ConcreteDirtSensor.h  ConcreteWallsSensor.cpp  ConcreteWallsSensor.h  House.cpp  House.h  VacuumCleaner.cpp  VacuumCleaner.h  simulator.cpp  simulator.h  utils.cpp  utils.h
